# hmny_challenge

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  instructions.md  pyproject.toml  try
app/: config.py  exceptions.py  main.py
app/api/: submissions.py  ui.py
app/schemas/: responses.py
app/services/: document.py  extraction.py  graph.py  jobs.py
app/templates/: index.html
baml_src/: classification.baml  clients.baml  income.baml  w2_earnings.baml
context/features/: 01-project-scaffolding.md  02-baml-extraction-schema.md  03-document-validation.md  04-extraction-service.md  05-api-endpoint.md  06-tests.md  07-bonus-features.md  08-documentation.md
tests/: conftest.py  test_classification.py  test_document.py  test_extraction.py  test_submissions.py  test_w2_extraction.py
